--- a/package.json
+++ b/package.json
@@ -4,8 +4,15 @@
   "private": true,
   "dependencies": {
     "apollo-boost": "^0.1.7",
+    "apollo-cache-inmemory": "^1.2.2",
+    "apollo-link-http": "^1.5.4",
+    "apollo-server-express": "^1.3.6",
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
+    "graphql-tools": "^3.0.2",
     "react": "^16.4.0",
     "react-apollo": "^2.1.4",
     "react-dom": "^16.4.0",
@@ -15,6 +22,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "apollo": "nodemon ./apollo/index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.5"
   }
 }
